# spotify-style-music-discovery-platform

./: .env.example  .gitignore  README.md  evaluation_plot.py  evaluation_report.md  evaluation_report_lastfm.md  pyproject.toml  requirements.txt
notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_modeling.ipynb  04_evaluation.ipynb
scripts/: collect_sample_data.py
src/app/: __init__.py  demo_data.py  demo_service.py  sample_data_cli.py  streamlit_app.py
src/auth/: __init__.py  spotify_auth.py
src/config/: settings.py
src/data/: __init__.py  data_collector.py  lastfm_catalog_builder.py  lastfm_preprocessor.py  preprocessor.py  spotify_client.py
tests/: test_advanced_hybrid_ranking_service.py  test_als_recommender.py  test_collaborative_recommender.py  test_content_recommender.py  test_data_collector.py  test_demo_service.py  test_discovery_scorer.py  test_diversity_evaluator.py  test_diversity_reranking_service.py  test_feature_builder.py  test_hybrid_recommender.py  test_interaction_matrix.py  test_lastfm_offline_evaluator.py  test_lastfm_preprocessor.py  test_offline_evaluator.py  test_playlist_generator.py  test_preprocessor.py  test_ranking_evaluator.py  test_similarity_builder.py  test_spotify_auth.py  test_spotify_candidate_service.py  test_spotify_client.py  test_spotify_explanation_service.py  test_spotify_playlist_export_service.py  test_spotify_recommendation_adapter.py  test_spotify_reranking_service.py  test_streamlit_product_polish.py  test_taste_profile_service.py  test_track_embedding_model.py  test_user_profile_service.py
(+33 files in other folders)
